# f-cc

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  NOTES.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  verify_setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: exposed-tests.yml  hidden-tests.yml
docs/: index.md
examples/: example_usage.py
src/: __init__.py  data_processing.py  data_simulator.py
tests/: test_custom.py  test_exposed.py
tests_hidden/: README.md
